Added Notebook on Linear Algebra

--- a/Notebooks/Untitled.ipynb
+++ b/Notebooks/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 2]\n",
-      " [3 4]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = np.array([[1, 2],[3, 4]])\n",
     "print(a)"
@@ -38,47 +29,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.5"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.mean(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.5, 3.5])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.mean(a, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,81 +56,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.5"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2],\n",
-       "       [3, 4]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.118033988749895"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.std(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1., 1.])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.std(a, axis = 0)"
    ]
@@ -175,23 +99,342 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std = math.sqrt(((1-2.5)**2+(2-2.5)**2+(3-2.5)**2+(4-2.5)**2)/4)\n",
+    "std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std = np.sqrt(((a - a.mean())**2/4).sum())\n",
+    "std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.std(a, ddof = 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ 2x_1 + 4x_2 + 2x_3 = 16 $$\n",
+    "$$ -2x_1 - 3x_2 + x_3 = -5 $$\n",
+    "$$ 2x_1 + 2x_2 - 3x_3 = -3 $$\n",
+    "\n",
+    "$$\\begin{bmatrix}\n",
+    "2 & 4 & 2\\\\\n",
+    "-2 & -3 & 1\\\\\n",
+    "2 & 2 & -3 \n",
+    "\\end{bmatrix}\\begin{bmatrix}\n",
+    "x_1\\\\\n",
+    "x_2\\\\\n",
+    "x_3\\end{bmatrix} = \\begin{bmatrix}\n",
+    "16\\\\\n",
+    "-5\\\\\n",
+    "-3\\end{bmatrix} $$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy.linalg as LA\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.118033988749895"
+       "array([[ 2,  4,  2],\n",
+       "       [-2, -3,  1],\n",
+       "       [ 2,  2, -3]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "std = math.sqrt(((1-2.5)**2+(2-2.5)**2+(3-2.5)**2+(4-2.5)**2)/4)\n",
-    "std"
+    "A = np.array([[2, 4, 2],[-2, -3, 1],[2, 2, -3]])\n",
+    "B = np.array([16, -5, -3])\n",
+    "\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 2., 3.])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol = LA.solve(A, B)\n",
+    "\n",
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([16., -5., -3.])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A @ sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([16., -5., -3.])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dot(A, sol)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\begin{bmatrix}\n",
+    "2 & 4 & 2\\\\\n",
+    "-2 & -3 & 1\\\\\n",
+    "2 & 2 & -3 \n",
+    "\\end{bmatrix}\\begin{bmatrix}\n",
+    "1\\\\\n",
+    "2\\\\\n",
+    "3\\end{bmatrix}  $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\rho = \\frac{1}{4}\\begin{bmatrix}\n",
+    "2 & 1 & 1\\\\\n",
+    "1 & 1 & 0\\\\\n",
+    "1 & 0 & 1 \n",
+    "\\end{bmatrix}$$\n",
+    "\n",
+    "$$\\rho \\vec{v} = \\lambda \\vec{v}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.5 , 0.25, 0.25],\n",
+       "       [0.25, 0.25, 0.  ],\n",
+       "       [0.25, 0.  , 0.25]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rho = (0.25)*np.array([[2, 1, 1],[1, 1, 0],[1, 0, 1]])\n",
+    "\n",
+    "rho"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 7.5000000e-01, -7.2858386e-17,  2.5000000e-01])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D, U = LA.eig(rho)\n",
+    "\n",
+    "D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-8.16496581e-01, -5.77350269e-01, -1.57009246e-16],\n",
+       "       [-4.08248290e-01,  5.77350269e-01, -7.07106781e-01],\n",
+       "       [-4.08248290e-01,  5.77350269e-01,  7.07106781e-01]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.61237244, -0.30618622, -0.30618622])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rho @ U[:, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.61237244, -0.30618622, -0.30618622])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D[0] * U[:, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\rho = UDU^{\\text{T}}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.00000000e+00,  1.11022302e-16, -1.11022302e-16],\n",
+       "       [ 1.11022302e-16,  1.00000000e+00,  0.00000000e+00],\n",
+       "       [-1.11022302e-16,  0.00000000e+00,  1.00000000e+00]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U @ U.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5.00000000e-01,  2.50000000e-01,  2.50000000e-01],\n",
+       "       [ 2.50000000e-01,  2.50000000e-01, -4.16333634e-17],\n",
+       "       [ 2.50000000e-01, -6.93889390e-17,  2.50000000e-01]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U @ np.diag(D) @ U.T"
    ]
   },
   {
@@ -202,7 +445,9 @@
     {
      "data": {
       "text/plain": [
-       "1.118033988749895"
+       "array([[0.5 , 0.25, 0.25],\n",
+       "       [0.25, 0.25, 0.  ],\n",
+       "       [0.25, 0.  , 0.25]])"
       ]
      },
      "execution_count": 17,
@@ -211,28 +456,7 @@
     }
    ],
    "source": [
-    "std = np.sqrt(((a - a.mean())**2/4).sum())\n",
-    "std"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.118033988749895"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.std(a, ddof = 0)"
+    "rho"
    ]
   },
   {
